src/clusterfuzz/_internal/tests/core/crash_analysis/stack_parsing/stack_analyzer_data/golang_panic_runtime_error_integer_divide_by_zero.txt
panic: runtime error: integer divide by zero

goroutine 40 [running]:
github.com/d2r2/go-bsbmp.(*SensorBMP180).ReadPressureMult10Pa(0x2502020, 0x2500080, 0x3, 0x4087becc, 0xc0000000, 0x4087becc)
  /home/pi/go/src/github.com/d2r2/go-bsbmp/bmp180.go:340 +0xfa4
github.com/d2r2/go-bsbmp.(*BMP).ReadAltitude(0x2500090, 0x3, 0x4087becc, 0x1, 0x4b2038)
  /home/pi/go/src/github.com/d2r2/go-bsbmp/bmp.go:213 +0x38
main.main.func3(0x2500090)
